# openworkers

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE-MIT  Makefile  README.md  REVIEW-feat-pdf-rag.md  REVIEW.md  ROADMAP.md  docker-compose.yml  promptForTheHead.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml
apps/api/: main.py  rate_limit.py
apps/cli/: main.py
apps/mcp_server/: main.py  server.py
apps/shared/: formatting.py
apps/worker/: main.py
core/: config.py  embedding_cache.py  embeddings.py  logging.py  schemas.py  schemas_audit.py
core/blackboard/: engine.py
core/corpus/: analyze.py  ingest.py  retrieve.py
core/evals/: harness.py  thesis_harness.py
core/memory/: episodic.py
core/observability/: metrics.py
core/orchestrator/: audit_prompts.py  compiler.py  flow.py  pr_flow.py  readme_flow.py  thesis_flow.py
core/router/: engine.py
core/sessions/: __init__.py  store.py
core/sources/: __init__.py  base.py  github.py  local_repo.py
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  architecture.md  examples.md
examples/mcp/: windsurf.json
prompts/: head_planner.md  head_supervisor.md  specialist_checker.md  specialist_critic.md  specialist_researcher.md  specialist_synthesizer.md
prompts/code_audit/: audit_critic.md  pr_checker.md  pr_planner.md  readme_checker.md  readme_planner.md
providers/: adapters.py  base.py  budget.py  code_audit_agents.py  interfaces.py  mocks.py  placeholders.py  resilience.py  thesis_agents.py  unified.py
qdrant_data/: meta.json
qdrant_data/collection/episodes/: storage.sqlite
scripts/: seed_corpus.py
tests/: conftest.py  test_api.py  test_blackboard.py  test_budget.py  test_cache.py  test_core.py  test_integrations.py  test_rag.py  test_resilience.py  test_smoke.py
tests/code_audit/: test_pr_flow.py  test_readme_flow.py
tests/fixtures/sample_pr/: diff.patch  pr.json
tests/fixtures/sample_repo/: README.md  pyproject.toml
tests/fixtures/sample_repo/widgetlib/: __init__.py  cli.py  telemetry.py  widget.py
tools/: cache.py
tools/mcp/: academic.py  engine.py  rag.py
