[project]
name = "openworkers"
version = "0.1.0"
description = "A research-focused hierarchical multi-agent system MVP."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "qdrant-client[fastembed]>=1.8.0",
    "anthropic>=0.25.0",
    "openai>=1.14.0",
    "duckduckgo-search>=5.2.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ruff>=0.6.0",
    "fakeredis>=2.20.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[project.scripts]
thesis = "apps.cli.main:main"
thesis-mcp = "apps.mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "core",
    "providers",
    "tools"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "apps/mcp_server/*", "scripts/*", ".venv/*"]

[tool.coverage.report]
fail_under = 60
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["\\.venv/", "site-packages/", "qdrant_data/"]

[[tool.mypy.overrides]]
module = ["core.*", "providers.*"]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py39"]
